# PredQL

./: .gitignore  README.md  pyproject.toml  regenerate_parser.sh
.github/workflows/: publish-to-pypi.yml
experiments/: relbench_exp.ipynb
experiments/model_training/: train_model.ipynb
experiments/task_generation/: relational_fel_exp.ipynb  relbench_exp.ipynb  utils.py
grammar/: Lexer_PQL.g4  PQLVisitor.py  Parser_PQL.g4
grammar/antlr4_parser/: Lexer_PQL.g4  Lexer_PQL.interp  Lexer_PQL.py  Parser_PQL.g4  Parser_PQL.interp  Parser_PQL.py  Parser_PQL.tokens  Parser_PQLListener.py  Parser_PQLVisitor.py
grammar/pql_converter/: Converter.py  StaticConverter.py  TemporalConverter.py  TimeManager.py  showcase.ipynb  showcase.py  showcase.txt  utils.py
grammar/pql_visitor/: PQLVisitor.py
grammar/showcase/: converter_showcase.ipynb  showcase.py  showcase.txt  showcase_helper.py
pql/: __init__.py
pql/converter/: Converter.py  StaticConverter.py  TemporalConverter.py  __init__.py  converter.py  static_converter.py  temporal_converter.py  utils.py
pql/parser/: LexerPQL.g4  Lexer_PQL.g4  ParserPQL.g4  Parser_PQL.interp  __init__.py
pql/parser/.antlr/: LexerPQL.java  ParserPQL.java
pql/visitor/: PQLVisitor.py  __init__.py  visitor_pql.py
predql/: __init__.py
predql/base/: __init__.py  database.py  table.py
predql/converter/: __init__.py  converter.py  static_converter.py  temporal_converter.py  utils.py
predql/parser/: LexerPredQL.g4  ParserPredQL.g4  __init__.py
predql/parser/.antlr/: LexerPredQL.java  ParserPredQL.interp  ParserPredQL.java
predql/validator/: __init__.py  error.py  static_validator.py  temporal_validator.py  validator.py
predql/visitor/: __init__.py  parsed_value.py  visitor.py  visitor_predql.py
showcase/: base_showcase.ipynb  converter_showcase.ipynb  showcase_helper.py  showcase_res.txt  validator_showcase.ipynb  visitor_showcase.ipynb
tests/: conftest.py  test_aggr_stat_converter.py  test_aggr_tmp_converter.py  test_cond_stat_converter.py  test_cond_tmp_converter.py  test_where_stat_converter.py  test_where_tmp_converter.py
tests/tests_stat/: test_aggr_stat_converter.py  test_cond_stat_converter.py  test_where_stat_converter.py
tests/tests_tmp/: conftest.py  test_aggr_tmp_converter.py  test_assuming_tmp_converter.py  test_cond_tmp_converter.py  test_where_tmp_converter.py
